--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,5 +1,8 @@
 {
   "development": {
     "BASE_URI": "http://localhost:3001"
+  },
+  "production": {
+    "BASE_URI": "http://ec2-54-238-213-206.ap-northeast-1.compute.amazonaws.com"
   }
 }
