--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "ignore": [
+    "node_modules/",
+    "public/"
+  ],
   "dependencies": {
     "immutable": "^4.0.0-rc.12",
+    "izitoast": "^1.4.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
