--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0"
-  }
+  },
+  "homepage": "http://floyd12.mooo.com/taptap-client"
 }
